[package]
name = "k-https-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1.4.1", features = ["server", "client", "http1"] }
hyper-util = { version = "0.1.7", features = ["tokio"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "io-util"] }
http-body-util = "0.1.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.10.0", features = ["v4"] }
http-auth-basic = "0.3.5"
tokio-rustls = "0.26.0"
rustls-pemfile = "2.1.3"
rustls = "0.23.12"
clap = { version = "4.5.17", features = ["derive", "env"] }
serde_yml = "0.0.12"
serde = { version = "1.0.209", features = ["derive", "rc"] }